# audisen

./: .gitignore  CMakeLists.txt  Makefile  Playlist_autotest.amp  README.md  amp.c  amp.h  ams.c  ams.h  audisen_sim.c  audisen_usb.c  define.h  frame.c  frame.h  piano_sonata.txt  play.py  test_unitaire.c  usb.c  usb.h  utils.c  utils.h
.github/workflows/: c-cpp.yml
autotest/: Playlist_autotest.amp  autotests.c  autotests.h
include/: amp.h  ams.h  autotests.h  define.h  frame.h  usb.h  utils.h
music/: Super_Playlist.amp  fure_elise.txt  interstellar_theme.txt  my_music.txt  pirate.txt  super_mario.txt
src/: amp.c  ams.c  audisen_sim.c  audisen_usb.c  autotests.c  frame.c  test_unitaire.c  usb.c  utils.c
